--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="vendor/font-awesome-4.2.0/css/font-awesome.css">
 		<link rel="stylesheet" href="vendor/bootstrap/bootstrap.css" />
 		<link href="styles/main.css" media="all" rel="stylesheet" type="text/css" />
+		<script src="vendor/jspdf/jspdf.js"></script>
 		<script data-main="scripts/main" src="vendor/requirejs/require.js"></script>
 	</head>
 	<body>
